--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body class="d-flex align-items-center justify-content-center" style="min-height:100vh;">
-  <a href="/login" class="btn btn-primary">Login</a>
+  <a href="/login" class="btn btn-primary mx-2">Login</a>
+  <a href="/register" class="btn btn-primary mx-2">Register</a>
 </body>
 </html>
