--- a/views/productShow.ejs
+++ b/views/productShow.ejs
@@ -8,18 +8,18 @@
 </head>
 <body>
     <h3>Product Page</h3>
-    <button><a href="/product/add">Add product</a></button>
+    <button><a href="/dashboard/admin/product/add">Add product</a></button>
     <br>
 
 
     <label>Sort</label>
-    <button><a href="/product/?sort=name">Nama</a></button>
-    <button><a href="/product/?sort=stock">stock</a></button>
-    <button><a href="/product/?sort=price">price</a></button>
+    <button><a href="/dashboard/admin/?sort=name">Nama</a></button>
+    <button><a href="/dashboard/admin/?sort=stock">stock</a></button>
+    <button><a href="/dashboard/admin/?sort=price">price</a></button>
     <br>
 
-
-    <form action="/product" method="get">
+    <button><a href="/dashboard/admin/listUser">List User</a></button>
+    <form action="/dashboard/admin" method="get">
     <label>Filter by</label>
     <select name="CategoryId">
         <% result2.forEach((el) =>{ %>
@@ -30,9 +30,9 @@
     </form>
 
 
-    <form action="/product" method="get">
+    <form action="/dashboard/admin" method="get">
         <label>Search</label>
-        <input type="text" name="search" placeholder="Beradasarkan Nama">
+        <input type="text" name="search" placeholder="Beradasarkan Nama" autocomplete="off">
         <button type="submit">Search</button>
     </form>
 
@@ -50,11 +50,13 @@
             <td><%= el.name %> </td>
             <td><%= el.brand %> </td>
             <td><%= el.stock %> </td>
-            <td><%= el.price %> </td>
+            <td><%= el.formatRupiah %> </td>
             <td><%= el.description %> </td>
-            <td><a href="/product/edit/<%= el.id %>">Edit</a> | <a href="/product/delete/<%= el.id %>">Delete</a></td>
+            <td><a href="/dashboard/admin/product/edit/<%= el.id %>">Edit</a> | <a href="/dashboard/admin/product/delete/<%= el.id %>">Delete</a></td>
         </tr>
         <% }) %> 
     </table>
+
+    <button><a href="/logout">Logout</a></button>
 </body>
 </html>
