--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -20,7 +20,7 @@
     <td><%= el.username%></td>
     <td><%= el.email%></td>
     <td><%= el.accaountAge%></td>
-    <td><a href="/dashboard/admin/listUser/delete">Delete</a></td>
+    <td><a href="/dashboard/admin/listUser/delete/<%= el.id %>">Delete</a></td>
     </tr>
     <% }) %>
     </table>
