--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,8 +20,8 @@
   </style>
 </head>
 <body>
-  <h3>Register</h3>
-  <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+  <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh; flex-direction: column;">
+    <h3>Register</h3>
     <form action="/register" method="post" class="form-floating">
       <div class="form-floating mb-2">
         <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="<%= input.username ? input.username : '' %>">
@@ -37,10 +37,6 @@
         <input type="password" class="form-control" name="password" id="password" placeholder="Password" <%= input.password ? input.password : '' %>>
         <label for="password">Password</label>
         <div class="invalid"><%= invalid.password ? invalid.password : '' %></div>
-      </div>
-      <div class="form-floating mb-2">
-        <input type="password" class="form-control" name="confirm" id="confirm" placeholder="Confirm" <%= input.confirm ? input.confirm : '' %>>
-        <label for="confirm">Confirm</label>
       </div>
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
